# mtg-webapp

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  CLAUDE.md  README.md  SETUP-PLAN.md  package-lock.json  package.json  requirements.txt  run-pytest.cmd  tasks.md
backend-rust/: Cargo.toml  Dockerfile
backend-rust/.sqlx/: query-0b0bc87cc3deeda132000a625ad96272f3d818429a7a569ba13045110315a525.json  query-1a9ec3d1d0ca05753c2886e24fe42302fb49048f97d7b966cefb4b81aec761c0.json  query-44f913eb007c7f75debd9bbaa86fe17a16518a290bc9e427424b7a723e3bccdb.json  query-5c7d6f670c49aed6d09becdf087a02ae7824b0159f496dd177e6a24570734af3.json  query-602808865d92e7a65184a57ab0119d9468546a16a952223a380bb1e989c861b5.json  query-8a82a77cd72d7749a4cbb11c624d24c6ebefbd3c93d1288f58e35af1b22623d3.json  query-c22d9868df6bc272a97e278d183dae397c02614c7021d07782d2b53b0bd5cf25.json  query-d168f0c1806e35362d82a29dfb84ce7c4d09c3d546482d41c737d94381892d98.json  query-e7ba3a58d986cf1ab2993a5ad62cceba960252552ec6b2cb8b6e76c360cf90b4.json
backend-rust/scripts/: enrich_riftdecks.py  scrape_riftdecks.py
backend-rust/src/: lib.rs  main.rs  phash.rs  rate_limit.rs
backend-rust/src/analysis/: mod.rs
backend-rust/src/db/: analysis.rs  auth_tokens.rs  card_duel.rs  cards.rs  collection.rs  decks.rs  minigames.rs  mod.rs  tournaments.rs  upgrades.rs  users.rs
backend-rust/src/models/: card.rs  collection.rs  deck.rs  minigame.rs  mod.rs  tournament.rs  user.rs
backend-rust/src/routes/: analysis.rs  auth.rs  card_duel.rs  cards.rs  collection.rs  decks.rs  minigames.rs  mod.rs  tournaments.rs  (+1 more)
(+139 files in other folders)
